--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <p style="font-size:14px; margin-top:15px;">
       Betaling skjer manuelt via Vipps<br>
-      Vips➡️ <b>929 36 381</b><br>
+      Vips➡️ <b>Vips➡️ 929 36 381</b><br>
       Melding: <i>TG Butikk – Produktnavn</i>
     </p>
   </div>
